# ReliableCD-Lite

./: .gitignore  README.md  pyproject.toml
configs/: bit.yaml  changeformer.yaml  crs.yaml  default.yaml  referral.yaml  runtime.yaml  uq.yaml
reliable/: __init__.py
reliable/adapters/: __init__.py  base.py  bit_adapter.py  changeformer_adapter.py
reliable/calibration/: __init__.py  calibration_runner.py  temperature_scaling.py
reliable/components/: __init__.py  boundary.py  extraction.py  features.py  matching.py  missed_change.py  oracle_labeling.py
reliable/data/: __init__.py  bit_format.py  dsifn_prepare.py  levir_loader.py  (+2 more)
scripts/: calibrate_temperature.py  eval_bit_cross_domain.py  eval_changeformer_levir.py  extract_components.py  make_figure2_panel.py  make_figures.py  measure_runtime.py  prepare_dsifn.py  prepare_whu.py  run_analyst_sensitivity.py  run_boundary_ring_ablation.py  run_crs_baselines.py  run_missed_change.py  run_pipeline.py  run_referral.py  run_referral_component_ablation.py  run_smoke_tests.py  run_threshold_sensitivity.py  run_uq.py  smoke_test.sh
tests/: __init__.py  test_adapters.py  test_analyst_sensitivity.py  test_calibration_runner.py  test_components.py  test_crs.py  test_curves.py  test_data_pipeline.py  test_evaluator.py  test_experiment_utils.py  test_make_figure2_panel_assets.py  test_make_figures.py  test_make_figures_assets.py  test_metrics.py  test_panels.py  test_referral_budget.py  test_reports.py  test_run_pipeline.py  test_runtime.py  test_shift_sensitivity.py  test_stats.py  test_tta.py  test_uq_script.py
(+44 files in other folders)
