[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliablecd-lite"
version = "0.1.0"
description = "Training-free component-level referral utilities for remote sensing change detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["reliable*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
